# argyle-task

./: .env.sample  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
models/: profile.py  work.py
scraper/: driver.py  login.py  main_page.py  navigation.py  scraping.py
