[tool.poetry]
name = "argyle-scan"
version = "0.1.0"
description = "Argyle UpWork scanner for job application"
authors = ["Luis Farias <luisgmfarias@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.9.3"
pandas = "^1.3.0"
Flask = "^2.0.1"
Scrapy = "^2.5.0"
ipython = "^7.25.0"
selenium = "^3.141.0"
autopep8 = "^1.5.7"
pydantic = "^1.8.2"
gunicorn = "^20.1.0"
fake-useragent = "^0.1.11"
random-user-agent = "^1.0.1"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
